--- a/UI/manage-product.html
+++ b/UI/manage-product.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="csrf-token" content="kmapods5wQ5L1hn7rcR9OPst7EsN0gC7SrHh3m9K" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,300,600,700">
     <link media="all" type="text/css" rel="stylesheet" href="css/bootstrap.min.css">
     <link media="all" type="text/css" rel="stylesheet" href="css/style.css?v=1.0">
@@ -20,8 +21,8 @@
 
         <div class="header content rows-content-header">
             <button class="button-menu-mobile show-sidebar">
-            <i class="fa fa-bars"></i>
-        </button>
+                <i class="fa fa-bars"></i>
+            </button>
             <div class="navbar navbar-default" role="navigation">
                 <div class="container">
 
@@ -48,7 +49,8 @@
                     <div class="panel-body pt-0">
                         <div class="row mb-4">
                             <div class="col-sm-12">
-                                <button type="button" class="btn btn-sm btn-primary pull-right" data-toggle="modal" data-target="#addProductModal">Add New Product</button>
+                                <button type="button" class="btn btn-sm btn-primary pull-right" data-toggle="modal"
+                                    data-target="#addProductModal">Add New Product</button>
                             </div>
                         </div>
                         <table class="table table-bordered">
@@ -71,7 +73,7 @@
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h4 class="modal-title">Add New Product</h4>
+                        <h4 class="modal-title">Create Product</h4>
                     </div>
                     <div class="modal-body">
                         <form id="productForm">
@@ -80,20 +82,23 @@
                                 <div class="col-sm-12">
                                     <div class="form-group">
                                         <label>Name</label>
-                                        <input class="form-control" placeholder="Name" name="prod_Name" id="name" type="text" value="">
+                                        <input class="form-control" placeholder="Name" name="prod_Name" id="name"
+                                            type="text" value="">
                                     </div>
                                 </div>
                                 <div class="col-sm-12">
                                     <div class="form-group">
                                         <label>Unit</label>
-                                        <input class="form-control" placeholder="Unit" name="prod_Unit" id="unit" type="text" value="">
+                                        <input class="form-control" placeholder="Unit" name="prod_Unit" id="unit"
+                                            type="text" value="">
                                         </select>
                                     </div>
                                 </div>
                                 <div class="col-sm-12">
                                     <div class="form-group">
                                         <label>Price Per Unit</label>
-                                        <input class="form-control" placeholder="Price Per Unit" name="prod_PricePerUnit" id="price" type="text" value="">
+                                        <input class="form-control" placeholder="Price Per Unit"
+                                            name="prod_PricePerUnit" id="price" type="text" value="">
                                     </div>
                                 </div>
                             </div>
@@ -120,20 +125,23 @@
                                 <div class="col-sm-12">
                                     <div class="form-group">
                                         <label>Name</label>
-                                        <input class="form-control" placeholder="Name" name="prod_Name" id="name" type="text" value="">
+                                        <input class="form-control" placeholder="Name" name="prod_Name" id="name"
+                                            type="text" value="">
                                     </div>
                                 </div>
                                 <div class="col-sm-12">
                                     <div class="form-group">
                                         <label>Unit</label>
-                                        <input class="form-control" placeholder="Unit" name="prod_Unit" id="unit" type="text" value="">
+                                        <input class="form-control" placeholder="Unit" name="prod_Unit" id="unit"
+                                            type="text" value="">
                                         </select>
                                     </div>
                                 </div>
                                 <div class="col-sm-12">
                                     <div class="form-group">
                                         <label>Price Per Unit</label>
-                                        <input class="form-control" placeholder="Price Per Unit" name="prod_PricePerUnit" id="price" type="text" value="">
+                                        <input class="form-control" placeholder="Price Per Unit"
+                                            name="prod_PricePerUnit" id="price" type="text" value="">
                                     </div>
                                 </div>
                             </div>
